src/test/ui/associated-consts/issue-63496.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-63496.rs:4:21
   |
LL |     const C: usize;
   |     --------------- required by `A::C`
LL | 
LL |     fn f() -> ([u8; A::C], [u8; A::C]);
   |                     ^^^^
   |                     |
   |                     cannot infer type
   |                     help: use the fully qualified path to an implementation: `<Type as A>::C`
   |
   = note: cannot satisfy `_: A`
   = note: associated constants cannot be accessed directly on a `trait`, they can only be accessed through a specific `impl`

error[E0283]: type annotations needed
  --> $DIR/issue-63496.rs:4:33
   |
LL |     const C: usize;
   |     --------------- required by `A::C`
LL | 
LL |     fn f() -> ([u8; A::C], [u8; A::C]);
   |                                 ^^^^
   |                                 |
   |                                 cannot infer type
   |                                 help: use the fully qualified path to an implementation: `<Type as A>::C`
   |
   = note: cannot satisfy `_: A`
   = note: associated constants cannot be accessed directly on a `trait`, they can only be accessed through a specific `impl`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
